# 8-Puzzle-Game

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: check-whitespaces.yml
apps/: CMakeLists.txt  app.cc
benchmarks/: CMakeLists.txt  celebrationbenchmark.cc
docs/: CMakeLists.txt
include/creator/: creatorlib.hpp
include/gui/: animationlib.hpp  boardlib.hpp  buttonlib.hpp  celebrationlib.hpp  colourlib.hpp  menulib.hpp  screenlib.hpp  settingslib.hpp
src/: CMakeLists.txt  animationlib.cc  boardlib.cc  celebration.cc  menulib.cc  nodelib.cc  screenlib.cc  settingslib.cc
tests/: CMakeLists.txt
